more services added

--- a/services.html
+++ b/services.html
@@ -1195,7 +1195,8 @@
                                 </div>
                                 <div data-w-tab="Tab 4" class="w-tab-pane">
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/bridal-party-makeup.html"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/bridal-makeup-party-makeup-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Make up</a></h3>
                                         <div class="menu-item-wrap">
@@ -1561,7 +1562,8 @@
                             class="footer-link-2">Keratin
                             Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore"
                             class="footer-link-2">Haircut &
-                            Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
+                            Styling</a><a href="/services/bridal-makeup-party-makeup-hennur-road-bangalore"
+                            class="footer-link-2">Bridal
                             MakeUp</a><a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore"
                             class="footer-link-2">Nails
                             Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
