--- a/services/bridal-makeup-party-makeup-hennur-road-bangalore.html
+++ b/services/bridal-makeup-party-makeup-hennur-road-bangalore.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
+    <title>Bridal Makeup in Hennur Road, Bangalore | Bridal & Party Makeup
     </title>
     <link rel="canonical"
-        href="https://www.sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore">
-    <meta content="Get professional nail extensions and gel nail polish in Hennur Road, Bangalore. Long-lasting, glossy nails perfect for everyday wear and special occasions.
+        href="https://www.sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore">
+    <meta content="Professional bridal makeup in Hennur Road, Bangalore with flawless finish. Also offering party makeup for weddings, receptions and special occasions.
 " name="description" />
-    <meta content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
+    <meta content="Bridal Makeup in Hennur Road, Bangalore | Bridal & Party Makeup
 " property="og:title" />
-    <meta content="Get professional nail extensions and gel nail polish in Hennur Road, Bangalore. Long-lasting, glossy nails perfect for everyday wear and special occasions.
+    <meta content="Professional bridal makeup in Hennur Road, Bangalore with flawless finish. Also offering party makeup for weddings, receptions and special occasions.
 " name="description
 " property="og:description" />
-    <meta content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
+    <meta content="Bridal Makeup in Hennur Road, Bangalore | Bridal & Party Makeup
 " property="twitter:title" />
-    <meta content="Get professional nail extensions and gel nail polish in Hennur Road, Bangalore. Long-lasting, glossy nails perfect for everyday wear and special occasions.
+    <meta content="Professional bridal makeup in Hennur Road, Bangalore with flawless finish. Also offering party makeup for weddings, receptions and special occasions.
 " name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
@@ -25,7 +25,7 @@
     <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore" />
+    <meta property="og:image:alt" content="Bridal Makeup in Hennur Road, Bangalore | Bridal & Party Makeup" />
     <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -70,19 +70,19 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore",
-      "name": "Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore",
-      "description": "Professional nail extensions and gel nail polish services in Hennur Road, Bangalore.",
+      "@id": "https://www.sugarcoatsalon.in/bridal-makeup-party-makeup-hennur-road-bangalore#webpage",
+      "url": "https://www.sugarcoatsalon.in/bridal-makeup-party-makeup-hennur-road-bangalore",
+      "name": "Bridal Makeup in Hennur Road, Bangalore",
+      "description": "Professional bridal and party makeup services in Hennur Road, Bangalore.",
       "isPartOf": {
         "@id": "https://www.sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore#service",
-      "name": "Nail Extensions and Gel Nail Polish",
-      "description": "Professional nail extensions and gel nail polish services for long-lasting, glossy and well-shaped nails.",
+      "@id": "https://www.sugarcoatsalon.in/bridal-makeup-party-makeup-hennur-road-bangalore#service",
+      "name": "Bridal Makeup and Party Makeup",
+      "description": "Professional bridal makeup and party makeup services with long-lasting, flawless finish.",
       "areaServed": {
         "@type": "Place",
         "name": "Hennur Road, Bangalore"
@@ -94,7 +94,7 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore#breadcrumb",
+      "@id": "https://www.sugarcoatsalon.in/bridal-makeup-party-makeup-hennur-road-bangalore#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -106,7 +106,7 @@
           "@type": "ListItem",
           "position": 2,
           "name": "Hair Colouring",
-          "item": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore"
+          "item": "https://www.sugarcoatsalon.in/bridal-makeup-party-makeup-hennur-road-bangalore"
         }
       ]
     }
@@ -145,96 +145,97 @@
             <div class="container w-container">
                 <div class="sections-wrapper">
                     <div class="about-section">
-                        <h1 class="heading h3 margin-bottom-60px">Nail Extensions & Gel Nail Polish in Hennur Road,
-                            Bangalore</h1>
+                        <h1 class="heading h3 margin-bottom-60px">Bridal Makeup in Hennur Road, Bangalore</h1>
                         <p class="paragraph medium-paragraph margin-bottom-20px">
-                            Looking for expert nail extensions and gel nail polish in Hennur Road, Bangalore? Get
-                            beautifully shaped, long-lasting nails with premium products and hygienic techniques.
+                            Looking for expert bridal makeup in Hennur Road, Bangalore? Get a flawless, long-lasting
+                            bridal look crafted to suit your skin tone, outfit, and wedding theme using premium
+                            products.
                         </p>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/nail-extensions-gel-nail-polish-process-hennur-road-bangalore.webp"
-                                        alt="Nail extensions and gel nail polish application process at a salon in Hennur Road Bangalore"
+                                        src="/assets/services/bridal-makeup-traditional-indian-hennur-road-bangalore.webp"
+                                        alt="Traditional bridal makeup look with flawless finish and bridal jewellery in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Nail Extension Services We Offer</h2>
+                                <h2 class="heading h4">Professional Bridal Makeup Services</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Acrylic/Gel nail extensions</li>
-                                    <li>Soft tip extensions</li>
-                                    <li>Nail refills & maintenance</li>
-                                    <li>Nail shaping & length correction</li>
-                                    <li>Gel nail polish</li>
-                                    <li>Nail art add-ons</li>
+                                    <li>Traditional bridal makeup</li>
+                                    <li>HD bridal makeup</li>
+                                    <li>Engagement & reception makeup</li>
+                                    <li>Party makeup</li>
+                                    <li>Photoshoot makeup</li>
+                                    <li>Bridal hairstyle & draping (add-on)</li>
                                 </ul>
-                                <h2 class="heading h4">What Is Gel Nail Polish?</h2>
-                                <p class="paragraph medium-paragraph margin-bottom-20px">
-                                    Gel nail polish is a long-lasting polish cured under UV/LED light. It offers a
-                                    glossy finish, chip-free wear, and a natural look that lasts much longer than
-                                    regular nail polish.
+                                <h2 class="heading h4">Why Choose Professional Bridal Makeup?</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Step 1: Skin analysis & bridal consultation</li>
+                                    <li>Step 2: Skin prep & base correction</li>
+                                    <li>Step 3: Eye makeup, contour & highlight</li>
+                                    <li>Step 4: Lip makeup & final setting</li>
+                                </ul>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Duration: 2–3 hours<br>Makeup longevity: Full event duration
                                 </p>
-                                <h2 class="heading h4">Benefits of Nail Extensions & Gel Polish</h2>
+                                <h2 class="heading h4">Party Makeup Services</h2>
+                                <p class="paragraph medium-paragraph margin-bottom-20px">
+                                    Party makeup is ideal for receptions, birthdays, cocktail parties, and special
+                                    events. It enhances your features while keeping the look fresh, elegant, and
+                                    camera-ready.
+                                </p>
+                                <h3 class="heading h5">Party Makeup Services</h3>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Benefits of Nail Extensions & Gel Polish</li>
-                                    <li>Long-lasting glossy finish</li>
-                                    <li>Chip-resistant colour</li>
-                                    <li>Custom length and shape</li>
-                                    <li>Ideal for parties, weddings & daily wear</li>
+                                    <li>Light to glam makeup looks</li>
+                                    <li>Eye makeup focus</li>
+                                    <li>Base makeup & setting</li>
+                                    <li>Hair styling add-on (optional)</li>
                                 </ul>
-                                <h2 class="heading h4">Who Should Opt for Nail Extensions or Gel Polish?</h2>
-                                <ul class="paragraph medium-paragraph">
-                                    <li>Short or weak nails</li>
-                                    <li>Special occasions & bridal events</li>
-                                    <li>Long-lasting everyday nails</li>
-                                    <li>Clean, polished look with minimal maintenance</li>
-                                </ul>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Duration: 60–90 minutes
+                                </p>
+
                             </div>
                         </div>
                     </div>
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Nail Extension & Gel Polish Process</h2>
+                                <h2 class="heading h4">Who Should Opt for Party Makeup?</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Step 1: Nail consultation & prep</li>
-                                    <li>Step 2: Nail extension or gel polish application</li>
-                                    <li>Step 3: UV/LED curing</li>
-                                    <li>Step 4: Shaping, finishing & cuticle care</li>
+                                    <li>Wedding guests</li>
+                                    <li>Engagement & reception attendees</li>
+                                    <li>Birthday or festive events</li>
+                                    <li>Corporate & social gatherings</li>
                                 </ul>
-                                <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Duration: 30-60 minutes(depends on service)<br>Maintenance: Every 4–6 weeks
-                                    recommended
-                                </p>
                                 <h2 class="heading h4">Aftercare Tips</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Avoid excessive water exposure initially</li>
-                                    <li>Avoid excessive soap,detergent and dishwashing liquids</li>
-                                    <li>Use gloves if doing gardening or crafts</li>
-                                    <li>Do not peel gel polish</li>
-                                    <li>Get timely refills for extensions</li>
+                                    <li>Avoid touching the face frequently</li>
+                                    <li>Carry blotting paper for touch-ups</li>
+                                    <li>Remove makeup gently post-event</li>
+                                    <li>Follow basic skincare routine</li>
                                 </ul>
-                                <h2 class="heading h4">FAQs – Nail Extensions & Gel Nail Polish</h2>
-                                <h3 class="paragraph large-paragraph">Are nail extensions safe?</h3>
+                                <h2 class="heading h4">FAQs – Bridal & Party Makeup</h2>
+                                <h3 class="paragraph large-paragraph">Do you offer trials for bridal makeup?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Yes, when applied and removed professionally.
+                                    Yes, bridal makeup trials are available on request.
                                 </p>
-                                <h3 class="paragraph large-paragraph">How long does gel nail polish last?</h3>
+                                <h3 class="paragraph large-paragraph">Will bridal makeup last all day?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Typically 2–3 weeks without chipping.
+                                    Yes, professional products and setting techniques ensure long-lasting wear.
                                 </p>
-                                <h3 class="paragraph large-paragraph">Can I remove gel polish at home?</h3>
+                                <h3 class="paragraph large-paragraph">Is party makeup different from bridal makeup?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Professional removal is recommended to avoid nail damage.
+                                    Yes, party makeup is lighter and quicker compared to full bridal makeup.
                                 </p>
                             </div>
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/nail-extensions-nail-art-design-hennur-road-bangalore.webp"
-                                        alt="Nail art design with nail extensions, rhinestones and floral details at a salon in Hennur Road Bangalore"
+                                        src="/assets/services/party-makeup-glam-fashion-look-hennur-road-bangalore.webp"
+                                        alt="Glam party makeup look with bold eye makeup and red lips at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
@@ -243,10 +244,10 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Book Nail Extensions & Gel Nail Polish in Hennur Road</h2>
+                                <h2 class="heading h4">Book Bridal Makeup in Hennur Road</h2>
                                 <p class="paragraph medium-paragraph margin-bottom-20px">
-                                    Visit our salon near Hennur Road, Bangalore for premium nail extensions and gel nail
-                                    polish services.
+                                    Visit our salon near Hennur Road, Bangalore for professional bridal and party makeup
+                                    services.
                                 </p>
                                 <div class="align-button-center">
                                     <!-- <div class="heading h4">Ready to look your absolute best for your
