--- a/services/hair-colouring-hennur-road-bangalore.html
+++ b/services/hair-colouring-hennur-road-bangalore.html
@@ -291,7 +291,8 @@
                         class="footer-link-2">Keratin
                         Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore"
                         class="footer-link-2">Haircut &
-                        Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
+                        Styling</a><a href="/services/bridal-makeup-party-makeup-hennur-road-bangalore"
+                        class="footer-link-2">Bridal
                         MakeUp</a><a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore"
                         class="footer-link-2">Nails
                         Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
