all main services added

--- a/index.html
+++ b/index.html
@@ -720,7 +720,8 @@
               Styling</a><a href="/services/bridal-makeup-party-makeup-hennur-road-bangalore"
               class="footer-link-2">Bridal MakeUp</a><a
               href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore" class="footer-link-2">Nails
-              Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial & Skincare</a>
+              Extensions</a><a href="/services/facial-skin-care-hennur-road-bangalore" class="footer-link-2">Facial &
+              Skincare</a>
           </div>
           <div class="footer-block-two">
             <div class="footer-title">Social</div>
