--- a/services.html
+++ b/services.html
@@ -519,7 +519,8 @@
                                 </div>
                                 <div data-w-tab="Tab 2" class="w-tab-pane">
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/facial-skin-care.html"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/facial-skin-care-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Waxing</a></h3>
                                         <div class="menu-item-wrap">
@@ -657,7 +658,8 @@
                                         </div>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/facial-skin-care.html"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/facial-skin-care-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Body polishing</a></h3>
                                         <div class="menu-item-wrap">
@@ -793,7 +795,8 @@
                                         </div>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/facial-skin-care.html"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/facial-skin-care-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 De tan</a></h3>
                                         <div class="menu-item-wrap">
@@ -883,7 +886,8 @@
                                         </div>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/facial-skin-care.html"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/facial-skin-care-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Cleanup</a></h3>
                                         <div class="menu-item-wrap">
@@ -909,7 +913,8 @@
                                         </div>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/facial-skin-care.html"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/facial-skin-care-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Facial</a></h3>
                                         <div class="menu-item-wrap">
@@ -1566,7 +1571,8 @@
                             class="footer-link-2">Bridal
                             MakeUp</a><a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore"
                             class="footer-link-2">Nails
-                            Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
+                            Extensions</a><a href="/services/facial-skin-care-hennur-road-bangalore"
+                            class="footer-link-2">Facial &
                             Skincare</a>
                     </div>
                     <div class="footer-block-two">
