--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -192,7 +192,8 @@
                             class="footer-link-2">Bridal
                             MakeUp</a><a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore"
                             class="footer-link-2">Nails
-                            Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
+                            Extensions</a><a href="/services/facial-skin-care-hennur-road-bangalore"
+                            class="footer-link-2">Facial &
                             Skincare</a>
                     </div>
                     <div class="footer-block-two">
