--- a/services/facial-skin-care-hennur-road-bangalore.html
+++ b/services/facial-skin-care-hennur-road-bangalore.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <title>Facial & Skin Care in Hennur Road, Bangalore | Glow & Skin Repair
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/hair-botox-treatment-hennur-road-bangalore">
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore">
+    <meta content="Professional facial and skin care treatments in Hennur Road, Bangalore for glowing, healthy skin. Customised facials for all skin types.
 " name="description" />
-    <meta content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <meta content="Facial & Skin Care in Hennur Road, Bangalore | Glow & Skin Repair
 " property="og:title" />
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <meta content="Professional facial and skin care treatments in Hennur Road, Bangalore for glowing, healthy skin. Customised facials for all skin types.
 " name="description
 " property="og:description" />
-    <meta content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <meta content="Facial & Skin Care in Hennur Road, Bangalore | Glow & Skin Repair
 " property="twitter:title" />
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <meta content="Professional facial and skin care treatments in Hennur Road, Bangalore for glowing, healthy skin. Customised facials for all skin types.
 " name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
     <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair" />
+    <meta property="og:image:alt" content="Facial & Skin Care in Hennur Road, Bangalore | Glow & Skin Repair" />
     <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -69,19 +69,19 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore",
-      "name": "Hair Botox Treatment in Hennur Road, Bangalore",
-      "description": "Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy and damaged hair.",
+      "@id": "https://www.sugarcoatsalon.in/facial-skin-care-hennur-road-bangalore#webpage",
+      "url": "https://www.sugarcoatsalon.in/facial-skin-care-hennur-road-bangalore",
+      "name": "Facial & Skin Care in Hennur Road, Bangalore",
+      "description": "Professional facial and skin care treatments in Hennur Road, Bangalore for healthy, glowing skin.",
       "isPartOf": {
         "@id": "https://www.sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#service",
-      "name": "Hair Botox Treatment",
-      "description": "A deep conditioning hair repair treatment that restores moisture, smoothness, and shine to damaged and frizzy hair.",
+      "@id": "https://www.sugarcoatsalon.in/facial-skin-care-hennur-road-bangalore#service",
+      "name": "Facial and Skin Care",
+      "description": "Professional facial and skin care services including glow facials, acne treatment and skin rejuvenation.",
       "areaServed": {
         "@type": "Place",
         "name": "Hennur Road, Bangalore"
@@ -93,7 +93,7 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#breadcrumb",
+      "@id": "https://www.sugarcoatsalon.in/facial-skin-care-hennur-road-bangalore#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -104,8 +104,8 @@
         {
           "@type": "ListItem",
           "position": 2,
-          "name": "Hair Botox Treatment",
-          "item": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore"
+          "name": "Hair Colouring",
+          "item": "https://www.sugarcoatsalon.in/facial-skin-care-hennur-road-bangalore"
         }
       ]
     }
@@ -144,51 +144,56 @@
             <div class="container w-container">
                 <div class="sections-wrapper">
                     <div class="about-section">
-                        <h1 class="heading h3 margin-bottom-60px">Hair Botox Treatment in Hennur Road, Bangalore</h1>
+                        <h1 class="heading h3 margin-bottom-60px">Facial & Skin Care in Hennur Road, Bangalore</h1>
                         <p class="paragraph medium-paragraph margin-bottom-20px">
-                            Looking for Hair Botox Treatment in Hennur Road, Bangalore? Hair Botox is a
-                            deep-conditioning treatment that restores moisture, repairs damage, and smoothens frizzy
-                            hair without altering your natural texture.
+                            Looking for professional facial and skin care in Hennur Road, Bangalore? Our customised
+                            facial treatments cleanse, nourish, and rejuvenate your skin for a healthy, radiant glow.
                         </p>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-botox-before-after-hennur-road-bangalore.webp"
-                                        alt="Hair botox treatment before and after result showing smooth, frizz-free hair in Hennur Road Bangalore"
+                                        src="/assets/services/facial-treatment-process-skin-care-hennur-road-bangalore.webp"
+                                        alt="Facial treatment process with cleansing and massage for skin care at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">What Is Hair Botox Treatment?</h2>
-                                <div class="paragraph medium-paragraph">Hair Botox is a non-chemical hair rejuvenation
-                                    treatment enriched with proteins, vitamins, amino acids, and nourishing oils. It
-                                    repairs hair from within and improves softness, shine, and manageability</div>
-                                <h2 class="heading h4">Benefits of Hair Botox</h2>
+                                <h2 class="heading h4">Facial & Skin Care Services We Offer</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Visible reduction in frizz</li>
-                                    <li>Deep hydration for dry hair</li>
-                                    <li>Improved shine and smoothness</li>
-                                    <li>Repairs damage from heat & colouring</li>
-                                    <li>Safe for coloured and chemically treated hair</li>
+                                    <li>Clean-up & basic facials</li>
+                                    <li>Hydrating facials</li>
+                                    <li>Brightening & glow facials</li>
+                                    <li>Anti-acne facial treatments</li>
+                                    <li>Anti-ageing facials</li>
+                                    <li>Detan & pigmentation treatments</li>
                                 </ul>
-                                <h2 class="heading h4">Who Should Get Hair Botox?</h2>
+                                <h2 class="heading h4">Why Professional Facial Treatments Matter</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>People with frizzy or rough hair</li>
-                                    <li>Dry, dull, or lifeless hair</li>
-                                    <li>Hair damaged due to colouring or styling</li>
-                                    <li>Those wanting smooth hair without straightening</li>
+                                    <li>Deep cleansing & exfoliation</li>
+                                    <li>Improved skin texture</li>
+                                    <li>Hydration and nourishment</li>
+                                    <li>Reduced dullness & tan</li>
+                                    <li>Relaxation and stress relief</li>
                                 </ul>
-                                <h2 class="heading h4">Hair Botox Treatment Process</h2>
+                                <h2 class="heading h4">Who Should Opt for Facial & Skin Care?</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Step 1: Hair cleansing</li>
-                                    <li>Step 2: Hair Botox application</li>
-                                    <li>Step 3: Heat activation</li>
-                                    <li>Step 4: Rinse & professional blow-dry</li>
+                                    <li>Dull or tired skin</li>
+                                    <li>Acne-prone skin</li>
+                                    <li>Uneven skin tone or tan</li>
+                                    <li>Pre-event skin prep</li>
+                                    <li>Regular skin maintenance</li>
+                                </ul>
+                                <h2 class="heading h4">Who Should Opt for Facial & Skin Care?</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Step 1: Skin analysis & consultation</li>
+                                    <li>Step 2: Cleansing & exfoliation</li>
+                                    <li>Step 3: Massage & mask application</li>
+                                    <li>Step 4: Toning, moisturising & SPF</li>
                                 </ul>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Duration: 2-2.5 hours<br>Results last: 3-5 months (with proper home care)
+                                    Duration: 45–90 minutes<br>Recommended: Every 3–4 weeks
                                 </p>
                             </div>
                         </div>
@@ -196,39 +201,32 @@
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Hair Botox vs Keratin</h2>
-                                <div class="paragraph medium-paragraph">Hair Botox focuses on repair and hydration,
-                                    while keratin is a straightening treatment. If you want natural-looking smooth hair
-                                    without chemicals, Hair Botox is ideal. <a href="/blogs/keratin-vs-hair-botox"
-                                        class="menu-section-link-blogs">Read
-                                        more about Keratin vs Botox
-                                        Treatment
-                                        for hair.</a></div>
                                 <h2 class="heading h4">Aftercare Tips</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Use sulphate-free shampoo. Preferably for Botox / Keratin aftercare.</li>
-                                    <li>Avoid excessive heat styling</li>
-                                    <li>Avoid excessive oiling</li>
-                                    <li>Follow stylist-recommended products</li>
+                                    <li>Avoid direct sun exposure</li>
+                                    <li>Use sunscreen daily</li>
+                                    <li>Stay hydrated</li>
+                                    <li>Follow basic skincare routine</li>
                                 </ul>
-                                <h2 class="heading h4">FAQs – Hair Botox in Hennur Road</h2>
-                                <h3 class="paragraph large-paragraph">Is Hair Botox safe for all hair types?</h3>
+                                <h2 class="heading h4">FAQs – Facial & Skin Care</h2>
+                                <h3 class="paragraph large-paragraph">Are facials suitable for sensitive skin?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Yes, it’s safe and suitable for most hair types, including coloured hair.
+                                    Yes, treatments are customised based on skin type. And we do have specialized
+                                    facials for sensitive skins.
                                 </p>
-                                <h3 class="paragraph large-paragraph">Does Hair Botox straighten hair permanently?</h3>
+                                <h3 class="paragraph large-paragraph">How often should I get a facial?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    No, it smoothens and reduces frizz without permanent straightening.
+                                    Every 3–4 weeks for best results.
                                 </p>
-                                <h3 class="paragraph large-paragraph">How long does Hair Botox last?</h3>
+                                <h3 class="paragraph large-paragraph">Can men opt for facial treatments?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Results usually last 3–5 months depending on home hair care routine.
+                                    Yes, facials are suitable for both men and women.
                                 </p>
                             </div>
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-botox-treatment-process-salon-hennur-road.webp"
-                                        alt="Hair botox treatment process being applied at salon in Hennur Road Bangalore"
+                                        src="/assets/services/facial-skin-care-treatment-glow-hennur-road-bangalore.webp"
+                                        alt="Facial and skin care treatment for glowing and healthy skin at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
@@ -237,10 +235,10 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Book Hair Botox Treatment in Hennur Road</h2>
+                                <h2 class="heading h4">Book Facial & Skin Care in Hennur Road</h2>
                                 <p class="paragraph medium-paragraph margin-bottom-20px">
-                                    Visit our salon near Hennur Road, Bangalore for professional Hair Botox Treatment
-                                    and experience smoother, healthier hair.
+                                    Visit our salon near Hennur Road, Bangalore for professional facial and skin care
+                                    treatments.
                                 </p>
                                 <div class="align-button-center">
                                     <!-- <div class="heading h4">Ready to look your absolute best for your
@@ -280,7 +278,7 @@
                         href="/contact" class="footer-link">Contact Us</a></div>
                 <div class="footer-block-two"><a class="footer-link">Popular Services</a>
                     <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
-                        Treatment</a><a href="/services/keratin-treatment-hennur-road-bangalore"
+                        Treatment</a><a href="/services/hair-colouring-hennur-road-bangalore"
                         class="footer-link-2">Keratin
                         Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore"
                         class="footer-link-2">Haircut &
