internal links corrected

--- a/blog.html
+++ b/blog.html
@@ -163,7 +163,7 @@
                                     <p class="paragraph small-paragraph">25 Jan 2026</p>
                                 </div>
                             </a>
-                            <a href="/blogs/salon-makeup-vs-diy-makeup.html"
+                            <a href="/blogs/salon-makeup-vs-diy-makeup"
                                 id="w-node-b51b1697-95a3-46f7-1aa8-dbeb9ae6f53f-dc178eda" class="card card-link">
                                 <div class="card-image-block margin-bottom-30px">
                                     <div class="image-container"><img src="/assets/blog/salon-makeup-vs-diy-makeup.webp"
@@ -212,7 +212,7 @@
                                     class="title-block margin-bottom-40px">
                                     <h2 class="heading h3">Book Your Appointment Today</h2>
                                 </div><a data-w-id="88b33b3b-4b99-8288-c284-dfd0b32a9d79" style="opacity:0"
-                                    href="contact-us.html" class="button cta-button w-button">Book Appointment</a>
+                                    href="/contact" class="button cta-button w-button">Book Appointment</a>
                             </div>
                         </div>
                     </div>
