--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           </div>
           <div class="experience-block">
             <div class="w-layout-grid _3-grids">
-              <a href="/services/haircut-and-styling-hennur-road-bangalore.html" class="card-link"
+              <a href="/services/haircut-and-styling-hennur-road-bangalore" class="card-link"
                 id="w-node-_89afada3-0bac-e08c-380c-0fc7512c034e-dc178eda"
                 data-w-id="89afada3-0bac-e08c-380c-0fc7512c034e" style="opacity:0" class="card">
                 <div class="card-image-block margin-bottom-30px">
@@ -293,7 +293,7 @@
                     understand your vibe and deliver styles that suit your personality, face, and lifestyle.</p>
                 </div>
               </a>
-              <a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore.html" class="card-link"
+              <a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore" class="card-link"
                 id="w-node-fbad0cd9-14ba-ba9a-b80c-e79146d0fb9c-dc178eda"
                 data-w-id="fbad0cd9-14ba-ba9a-b80c-e79146d0fb9c" style="opacity:0" class="card">
                 <div class="card-image-block margin-bottom-30px">
@@ -312,7 +312,7 @@
 
                 </div>
               </a>
-              <a href="/services/bridal-makeup-party-makeup-hennur-road-bangalore.html" class="card-link"
+              <a href="/services/bridal-makeup-party-makeup-hennur-road-bangalore" class="card-link"
                 id="w-node-eeab10a3-a60b-0fb3-bbf1-d8d1f0002132-dc178eda"
                 data-w-id="eeab10a3-a60b-0fb3-bbf1-d8d1f0002132" style="opacity:0" class="card">
                 <div class="card-image-block margin-bottom-30px">
