minor seo corrections canonical

--- a/blogs/salon-makeup-vs-diy-makeup.html
+++ b/blogs/salon-makeup-vs-diy-makeup.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Salon Makeup vs DIY Makeup: Why Professional Makeup Makes a Real Difference | Sugarcoat Salon
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup">
+    <link rel="canonical" href="https://sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup">
     <meta content="Salon makeup vs DIY makeup explained by a professional makeup artist. Discover why professional makeup delivers better finish, longevity, and photo-ready results at Sugarcoat Salon.
 " name="description" />
     <meta content="Salon Makeup vs DIY Makeup: Why Professional Makeup Makes a Real Difference | Sugarcoat Salon
@@ -21,11 +21,11 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <!-- Social Share Image -->
-    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
+    <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Hair and beauty blog by Sugarcoat Salon Bangalore" />
-    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
+    <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
     <meta name="robots" content="index, follow">
@@ -43,7 +43,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -59,50 +59,50 @@
   "@graph": [
     {
       "@type": "Organization",
-      "@id": "https://www.sugarcoatsalon.in/#organization",
+      "@id": "https://sugarcoatsalon.in/#organization",
       "name": "Sugarcoat Salon",
       "url": "https://www.sugarcoatsalon.in",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.sugarcoatsalon.in/assets/sc-logo-03.svg"
+        "url": "https://sugarcoatsalon.in/assets/sc-logo-03.svg"
       }
     },
     {
       "@type": "BlogPosting",
-      "@id": "https://www.sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup#blogposting",
+      "@id": "https://sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup#blogposting",
       "headline": "Keratin vs Botox Hair Treatment",
       "description": "Salon Makeup vs DIY Makeup: Why Professional Makeup Makes a Real Difference",
-      "image": "https://www.sugarcoatsalon.in/assets/blog/salon-makeup-vs-diy-makeup-hair.webp",
+      "image": "https://sugarcoatsalon.in/assets/blog/salon-makeup-vs-diy-makeup-hair.webp",
       "author": {
         "@type": "Organization",
-        "@id": "https://www.sugarcoatsalon.in/#organization"
+        "@id": "https://sugarcoatsalon.in/#organization"
       },
       "publisher": {
         "@type": "Organization",
-        "@id": "https://www.sugarcoatsalon.in/#organization"
+        "@id": "https://sugarcoatsalon.in/#organization"
       },
       "datePublished": "2026-01-31",
       "dateModified": "2026-01-31",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://www.sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup"
+        "@id": "https://sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup"
       }
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup#breadcrumb",
+      "@id": "https://sugarcoatsalon.in/blogs/salon-makeup-vs-diy-makeup#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "https://www.sugarcoatsalon.in/"
+          "item": "https://sugarcoatsalon.in/"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "Blog",
-          "item": "https://www.sugarcoatsalon.in/blog"
+          "item": "https://sugarcoatsalon.in/blog"
         },
         {
           "@type": "ListItem",
@@ -150,7 +150,7 @@
                     <div class="about-section">
                         <nav class="breadcrumbs" aria-label="Breadcrumb">
                             <ol>
-                                <li><a href="https://www.sugarcoatsalon.in/">Home</a></li>
+                                <li><a href="https://sugarcoatsalon.in/">Home</a></li>
                                 <li><a href="/blog">Blog</a></li>
                                 <li aria-current="page">Salon Makeup vs DIY Makeup: Why Professional Makeup
                                     Makes a Real Difference</li>
