--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Hair & Beauty Blog | Tips, Trends & Care Guides – Sugarcoat Salon
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/blog">
+    <link rel="canonical" href="https://sugarcoatsalon.in/blog">
     <meta content="Explore expert hair care tips, beauty trends, salon guides, and styling advice from Sugarcoat Salon professionals in Bangalore.
 " name="description" />
     <meta content="Hair & Beauty Blog | Tips, Trends & Care Guides – Sugarcoat Salon
@@ -19,11 +19,11 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <!-- Social Share Image -->
-    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
+    <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Hair and beauty blog by Sugarcoat Salon Bangalore" />
-    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
+    <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
     <meta name="robots" content="index, follow">
@@ -41,7 +41,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -56,7 +56,7 @@
   "@context": "https://schema.org",
   "@type": "Blog",
   "name": "Sugarcoat Salon Blog",
-  "url": "https://www.sugarcoatsalon.in/blog",
+  "url": "https://sugarcoatsalon.in/blog",
   "description": "Hair care tips, beauty trends, styling guides and salon advice from Sugarcoat Salon.",
   "publisher": {
     "@type": "Organization",
