--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Contact Sugarcoat Salon | Hennur, Bangalore</title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/contact">
+    <link rel="canonical" href="https://sugarcoatsalon.in/contact">
     <meta
         content="Contact Sugarcoat Salon in Hennur, Bangalore for hair, beauty, bridal makeup and nail services. Call or WhatsApp to book an appointment." />
     <meta content="Sugarcoat Salon" property="og:title" />
@@ -18,11 +18,11 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <!-- Social Share Image -->
-    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Sugarcoat Salon in Hennur, Bangalore" />
-    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="robots" content="index, follow">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -39,7 +39,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
