--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Sugarcoat Salon in Hennur | Hair, Makeup & Nail Services Bangalore</title>
-  <link rel="canonical" href="https://www.sugarcoatsalon.in/">
+  <link rel="canonical" href="https://sugarcoatsalon.in/">
   <meta
     content="Premium hair, makeup, nail & beauty services at Sugarcoat Salon in Hennur, Bangalore. From hair treatments to luxe facials, relax, refresh, and reinvent your style."
     name="description" />
@@ -18,11 +18,11 @@
     property="twitter:description" />
   <meta property="og:type" content="website" />
   <!-- Social Share Image -->
-  <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+  <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Sugarcoat Salon in Hennur, Bangalore" />
-  <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+  <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
   <!-- After you add your site in Search Console, Google gives a code-->
   <meta name="google-site-verification" content="LM9kGB_uIxpK8N3KkYqhk5jk9Giu9pFpjnC2SSC6HbA" />
   <!-- Bing Webmaster code -->
@@ -45,7 +45,7 @@
       }
     }
   </style>
-  <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+  <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
   <link href="https://fonts.googleapis.com" rel="preconnect" />
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
