--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/privacy-policy">
+    <link rel="canonical" href="https://sugarcoatsalon.in/privacy-policy">
     <title>Privacy Policy | Sugarcoat Salon Bangalore
     </title>
     <meta content="Learn how Sugarcoat Salon in Bangalore collects, uses, and protects your personal information."
@@ -34,7 +34,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
