--- a/services.html
+++ b/services.html
@@ -19,11 +19,11 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <!-- Social Share Image -->
-    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Sugarcoat Salon in Hennur, Bangalore" />
-    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="robots" content="index, follow">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -40,7 +40,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -1126,7 +1126,7 @@
                                     </div>
                                     <div class="menu-section">
                                         <h3 class="menu-section-title"><a
-                                                href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalores"
+                                                href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Nail Extensions</a></h3>
                                         <div class="menu-item-wrap">
