--- a/services/bridal-makeup-party-makeup-hennur-road-bangalore.html
+++ b/services/bridal-makeup-party-makeup-hennur-road-bangalore.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <title>Bridal Makeup in Hennur Road, Bangalore | Bridal & Party Makeup
     </title>
-    <link rel="canonical"
-        href="https://www.sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore">
+    <link rel="canonical" href="https://sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore">
     <meta content="Professional bridal makeup in Hennur Road, Bangalore with flawless finish. Also offering party makeup for weddings, receptions and special occasions.
 " name="description" />
     <meta content="Bridal Makeup in Hennur Road, Bangalore | Bridal & Party Makeup
@@ -22,11 +21,11 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <!-- Social Share Image -->
-    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Bridal Makeup in Hennur Road, Bangalore | Bridal & Party Makeup" />
-    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
     <meta name="robots" content="index, follow">
@@ -44,7 +43,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -60,27 +59,27 @@
   "@graph": [
     {
       "@type": "Organization",
-      "@id": "https://www.sugarcoatsalon.in/#organization",
+      "@id": "https://sugarcoatsalon.in/#organization",
       "name": "Sugarcoat Salon",
       "url": "https://www.sugarcoatsalon.in",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.sugarcoatsalon.in/assets/sc-logo-03.svg"
+        "url": "https://sugarcoatsalon.in/assets/sc-logo-03.svg"
       }
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore",
+      "@id": "https://sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore#webpage",
+      "url": "https://sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore",
       "name": "Bridal Makeup in Hennur Road, Bangalore",
       "description": "Professional bridal and party makeup services in Hennur Road, Bangalore.",
       "isPartOf": {
-        "@id": "https://www.sugarcoatsalon.in/#website"
+        "@id": "https://sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore#service",
+      "@id": "https://sugarcoatsalon.in/services/bridal-makeup-party-makeup-hennur-road-bangalore#service",
       "name": "Bridal Makeup and Party Makeup",
       "description": "Professional bridal makeup and party makeup services with long-lasting, flawless finish.",
       "areaServed": {
@@ -89,7 +88,7 @@
       },
       "provider": {
         "@type": "BeautySalon",
-        "@id": "https://www.sugarcoatsalon.in/#organization"
+        "@id": "https://sugarcoatsalon.in/#organization"
       }
     }
   ]
