--- a/services/facial-skin-care-hennur-road-bangalore.html
+++ b/services/facial-skin-care-hennur-road-bangalore.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Facial & Skin Care in Hennur Road, Bangalore | Glow & Skin Repair
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore">
+    <link rel="canonical" href="https://sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore">
     <meta content="Professional facial and skin care treatments in Hennur Road, Bangalore for glowing, healthy skin. Customised facials for all skin types.
 " name="description" />
     <meta content="Facial & Skin Care in Hennur Road, Bangalore | Glow & Skin Repair
@@ -21,11 +21,11 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <!-- Social Share Image -->
-    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Facial & Skin Care in Hennur Road, Bangalore | Glow & Skin Repair" />
-    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
     <meta name="robots" content="index, follow">
@@ -43,7 +43,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -59,27 +59,27 @@
   "@graph": [
     {
       "@type": "Organization",
-      "@id": "https://www.sugarcoatsalon.in/#organization",
+      "@id": "https://sugarcoatsalon.in/#organization",
       "name": "Sugarcoat Salon",
       "url": "https://www.sugarcoatsalon.in",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.sugarcoatsalon.in/assets/sc-logo-03.svg"
+        "url": "https://sugarcoatsalon.in/assets/sc-logo-03.svg"
       }
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore",
+      "@id": "https://sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore#webpage",
+      "url": "https://sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore",
       "name": "Facial & Skin Care in Hennur Road, Bangalore",
       "description": "Professional facial and skin care treatments in Hennur Road, Bangalore for healthy, glowing skin.",
       "isPartOf": {
-        "@id": "https://www.sugarcoatsalon.in/#website"
+        "@id": "https://sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore#service",
+      "@id": "https://sugarcoatsalon.in/services/facial-skin-care-hennur-road-bangalore#service",
       "name": "Facial and Skin Care",
       "description": "Professional facial and skin care services including glow facials, acne treatment and skin rejuvenation.",
       "areaServed": {
@@ -88,7 +88,7 @@
       },
       "provider": {
         "@type": "BeautySalon",
-        "@id": "https://www.sugarcoatsalon.in/#organization"
+        "@id": "https://sugarcoatsalon.in/#organization"
       }
     }
   ]
