--- a/services/nail-extensions-gel-nail-polish-hennur-road-bangalore.html
+++ b/services/nail-extensions-gel-nail-polish-hennur-road-bangalore.html
@@ -6,7 +6,7 @@
     <title>Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
     </title>
     <link rel="canonical"
-        href="https://www.sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore">
+        href="https://sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore">
     <meta content="Get professional nail extensions and gel nail polish in Hennur Road, Bangalore. Long-lasting, glossy nails perfect for everyday wear and special occasions.
 " name="description" />
     <meta content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
@@ -22,11 +22,11 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <!-- Social Share Image -->
-    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta property="og:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore" />
-    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
+    <meta name="twitter:image" content="https://sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
     <meta name="robots" content="index, follow">
@@ -44,7 +44,7 @@
             }
         }
     </style>
-    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
+    <link rel="sitemap" type="application/xml" href="https://sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -60,27 +60,27 @@
   "@graph": [
     {
       "@type": "Organization",
-      "@id": "https://www.sugarcoatsalon.in/#organization",
+      "@id": "https://sugarcoatsalon.in/#organization",
       "name": "Sugarcoat Salon",
       "url": "https://www.sugarcoatsalon.in",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.sugarcoatsalon.in/assets/sc-logo-03.svg"
+        "url": "https://sugarcoatsalon.in/assets/sc-logo-03.svg"
       }
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore",
+      "@id": "https://sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore#webpage",
+      "url": "https://sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore",
       "name": "Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore",
       "description": "Professional nail extensions and gel nail polish services in Hennur Road, Bangalore.",
       "isPartOf": {
-        "@id": "https://www.sugarcoatsalon.in/#website"
+        "@id": "https://sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore#service",
+      "@id": "https://sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore#service",
       "name": "Nail Extensions and Gel Nail Polish",
       "description": "Professional nail extensions and gel nail polish services for long-lasting, glossy and well-shaped nails.",
       "areaServed": {
@@ -89,7 +89,7 @@
       },
       "provider": {
         "@type": "BeautySalon",
-        "@id": "https://www.sugarcoatsalon.in/#organization"
+        "@id": "https://sugarcoatsalon.in/#organization"
       }
     }
   ]
