all broken links corrected

--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
   "publisher": {
     "@type": "Organization",
     "name": "Sugarcoat Salon",
-    "url": "https://www.sugarcoatsalon.in"
+    "url": "https://sugarcoatsalon.in"
   }
 }
 </script>
