--- a/services/nail-extensions-gel-nail-polish-hennur-road-bangalore.html
+++ b/services/nail-extensions-gel-nail-polish-hennur-road-bangalore.html
@@ -62,7 +62,7 @@
       "@type": "Organization",
       "@id": "https://sugarcoatsalon.in/#organization",
       "name": "Sugarcoat Salon",
-      "url": "https://www.sugarcoatsalon.in",
+      "url": "https://sugarcoatsalon.in",
       "logo": {
         "@type": "ImageObject",
         "url": "https://sugarcoatsalon.in/assets/sc-logo-03.svg"
