minor seo corrections

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <title>Contact Sugarcoat Salon | Hennur, Bangalore</title>
     <link rel="canonical" href="https://sugarcoatsalon.in/contact">
     <meta
-        content="Contact Sugarcoat Salon in Hennur, Bangalore for hair, beauty, bridal makeup and nail services. Call or WhatsApp to book an appointment." />
+        content="Contact Sugarcoat Salon in Hennur, Bangalore for hair, beauty, bridal makeup and nail services. Call or WhatsApp to book an appointment."
+        name="description" />
     <meta content="Sugarcoat Salon" property="og:title" />
     <meta
         content="Contact Sugarcoat Salon in Hennur, Bangalore for hair, beauty, bridal makeup and nail services. Call or WhatsApp to book an appointment."
